update java version 21

--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.aeonbits.owner</groupId>
             <artifactId>owner</artifactId>
             <version>1.0.12</version>
@@ -173,8 +180,8 @@
                 <!-- Compiler code vs Java 11 -->
                 <configuration>
 
-                    <source>17</source>
-                    <target>17</target>
+                    <source>11</source>
+                    <target>11</target>
 
                 </configuration>
             </plugin>
